[package]
name = "cliplm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
arboard = "3.3.2"
base64 = "0.22.0"
clap = { version = "4.5.2", features = ["derive"] }
image = { version = "0.24.9", default-features = false, features = ["png"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
ureq = { version = "2.9.6", default-features = false, features = ["json"] }

[profile.release]
debug = 2
